--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "6.11.1",
     "mongose": "^0.0.2-security",
     "next": "15.3.5",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swr": "^2.3.4"
