register and sign up with google

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "6.11.1",
     "mongose": "^0.0.2-security",
